💄 fixes the mobile spacing

--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,16 @@ Main Colors:
   text-align: center;
 }
 
+h1 {
+  font-size: 1.8rem;
+}
+
 h2 {
   font-size: 1.2rem;
+}
+
+h2.random-command {
+  padding: auto 1.5rem;
 }
 
 /* Navbar Styles */
